--- a/src/scss/layout/_home.scss
+++ b/src/scss/layout/_home.scss
@@ -60,7 +60,7 @@
   .items {
     display: grid;
     gap: 0.5em;
-    grid-template-columns: repeat(auto-fit, 250px);
+    grid-template-columns: repeat(auto-fit, min(100%, 250px));
     grid-auto-rows: 1fr;
     justify-content: center;
     grid-auto-flow: row;
